# jubjub

./: Cargo.toml
src/: fr.rs  lib.rs
tests/: common.rs  fq_blackbox.rs  fr_blackbox.rs
