[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Eirik Ogilvie-Wigley <eowigley@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
    "CPerezz <carlos@dusk.network>",
    "NoCtrlZ<shinsaku.ashizawa@artree.co.jp>"
]
description = "Dusk's fork of the implementation of the Jubjub elliptic curve group"
homepage = "https://github.com/dusk-network/jubjub"
license = "MIT/Apache-2.0"
name = "plonk-jubjub"
repository = "https://github.com/dusk-network/jubjub"
version = "0.1.0"
keywords = ["cryptography", "jubjub", "zk-snarks", "ecc", "elliptic-curve"]
categories =["algorithms", "cryptography", "science"]
edition = "2018"
exclude = [".github/workflows/ci.yml", "github/workflows/rust.yml",
".gitignore",
]

[dependencies]
dusk-bytes = "0.1"
plonk-bls12_381 = {version = "0.1", default-features = false, path = "../dusk-bls12_381"}
parity-subtle = {version = "0.1.1",  default-features = false}
rand_core = {version = "0.6", default-features=false}
canonical = {version = "0.6", default-features = false, optional = true}
canonical_derive = {version = "0.6", optional = true}

[dev-dependencies]
rand_xorshift = {version="0.3", default-features = false}
blake2 = "0.9"
